[gd_scene load_steps=5 format=3 uid="uid://bgn7vrh6tbdo0"]

[ext_resource type="Theme" uid="uid://1cbvg04l0616" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/node_theme.tres" id="1_bs0dt"]
[ext_resource type="StyleBox" uid="uid://bie6450rn7l44" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_node.tres" id="2_wpdey"]
[ext_resource type="StyleBox" uid="uid://oujfit2l7l4s" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_node_selected.tres" id="3_xrusj"]
[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorJumpNode.gd" id="4_823kx"]

[node name="EditorJumpNode" type="GraphNode"]
offset_right = 384.0
offset_bottom = 74.0
theme = ExtResource("1_bs0dt")
theme_override_styles/frame = ExtResource("2_wpdey")
theme_override_styles/selected_frame = ExtResource("3_xrusj")
title = "Jump To..."
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(1, 1, 1, 0.0980392)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("4_823kx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DestinationOption" type="OptionButton" parent="MarginContainer"]
layout_mode = 2
flat = true
fit_to_longest_item = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="item_selected" from="MarginContainer/DestinationOption" to="." method="_on_option_button_item_selected"]
